data/derived/fa15/progs/unify/prog3635.ml.out
Characters 88-92:
  List.fold_left f base xs;;
                   ^^^^
Error: This expression has type int but an expression was expected of type
         int -> int -> int
